# woodchipper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/woodchipper/: __init__.py  __main__.py  cli.py  core.py  server.py
tests/: __init__.py  test_cli.py  test_core.py
