[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woodchipper"
version = "0.1.0"
description = "A Python library, CLI tool, and HTTP API for analyzing PDF files. Extracts metadata, computes file hashes, finds embedded URLs, detects forms, AcroForms, XFA, JavaScript, embedded files, rich media, and identifies suspicious actions and anomalies. All output is automatically defanged for safe handling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ryan C. Moon", email = "woodchipper@moonbase.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-magic>=0.4.27",
    "pypdf>=4.0.0",
    "defang>=0.5.3",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "woodchipper[server,dev]",
]

[project.scripts]
woodchipper = "woodchipper.cli:main"
woodchipper-server = "woodchipper.server:main"

[project.urls]
Homepage = "https://github.com/ryancmoon/woodchipper"
Repository = "https://github.com/ryancmoon/woodchipper"

[tool.hatch.build.targets.wheel]
packages = ["src/woodchipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
